# snak

./: package-lock.json  package.json  vite.config.ts
src/: index.css  main.tsx  providers.ts  seedDemo.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: arxiv.rs  attachments.rs  keys.rs  mod.rs  skills.rs  streaming.rs  workspace.rs
src/api/: workspace.ts
src/components/: ChatSettings.tsx  ChatView.tsx  CommandPalette.tsx  ContentSearch.tsx  FileTree.tsx  FileViewer.tsx  MarkdownRenderer.tsx  ModelSelector.tsx  Onboarding.tsx  PaneView.tsx  PdfViewer.tsx  SearchOverlay.tsx  SettingsPanel.tsx  Sidebar.tsx  TabBar.tsx  TabDndContext.tsx  WorkspaceChrome.tsx  WorkspaceHome.tsx
src/hooks/: useChatEngine.ts  useSessionPersist.ts
src/routes/: __root.tsx  index.tsx
src/stores/: chatDraftStore.ts  chatStore.ts  index.ts  paneStore.ts  sessionStore.ts  settingsStore.ts  skillStore.ts  tabStore.ts  uiStore.ts  workspaceStore.ts
src/themes/: index.ts
src/utils/: buildChildIndex.ts  chatStreamSession.ts  fileNodes.ts  messagePreview.ts  workspaceIndex.ts
