[package]
name = "snak"
version = "0.1.0"
description = "IDE-like AI Chat Application"
authors = []
edition = "2021"

[lib]
name = "snak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
rusqlite = { version = "0.32", features = ["bundled", "vtab", "array"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
